--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -256,7 +256,7 @@ img {
     content: "";
     width: 100%;
     height: 70%;
-    background: linear-gradient(rgba(var(--c-brand-rgb), 0.7), rgba(var(--c-brand-rgb), 0.4)), url(../images/counter.jpg);
+    background: linear-gradient(rgba(var(--c-brand-rgb), 0.7), rgba(var(--c-brand-rgb), 0.4)), url(../images/bosque.jpg);
     background-position: center;
     background-size: cover;
     position: absolute;
