--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -115,7 +115,7 @@ img {
 
 /* HERO */
 #hero {
-    background: linear-gradient(rgba(116, 109, 22, 0.3), rgba(116, 109, 22, 0.7)), url(../images/ani2home.jpg);
+    background: linear-gradient(rgba(116, 109, 22, 0.3), rgba(116, 109, 22, 0.7)), url(../images/ibs3.jpg);
     background-position: center;
     background-size: cover;
 }
