--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,6 +26,10 @@ h1, h2, h3,h4, h5, h6,
     color: var(--c-dark);
 }
 
+p{
+    font-size: 1.1rem;
+}
+
 a {
     text-decoration: none;
     color: var(--c-brand);
